// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ChoiceField with a checkbox 1`] = `
<div
  className="checkbox"
>
  <div
    className="focus-container"
  >
    <label
      className="label healtheintent-label-text"
    >
      <input
        className="native-input healtheintent-application"
        disabled={false}
        name="children_present"
        onBlur={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="children_present"
      />
      <span
        className="label-text"
      >
        Do you have any Children?
      </span>
    </label>
  </div>
</div>
`;

exports[`should render a checkbox 1`] = `
<div
  className="checkbox"
>
  <div
    className="focus-container"
  >
    <label
      className="label"
    >
      <input
        className="native-input"
        disabled={false}
        name={null}
        onBlur={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="label-text"
      >
        Checkbox
      </span>
    </label>
  </div>
</div>
`;

exports[`should render a checkbox with a hidden label 1`] = `
<div
  className="checkbox"
>
  <div
    className="is-hidden-focus-container"
  >
    <label
      className="label"
    >
      <input
        aria-label="Checkbox"
        checked={true}
        className="native-input"
        disabled={false}
        name={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="label-text is-hidden"
      />
    </label>
  </div>
</div>
`;

exports[`should render a controlled checkbox 1`] = `
<div
  className="checkbox"
>
  <div
    className="focus-container"
  >
    <label
      className="label"
    >
      <input
        checked={true}
        className="native-input"
        disabled={false}
        name={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="label-text"
      >
        Checkbox
      </span>
    </label>
  </div>
</div>
`;

exports[`should render a disabled checkbox 1`] = `
<div
  className="checkbox"
>
  <div
    className="focus-container"
  >
    <label
      className="label is-disabled"
    >
      <input
        checked={true}
        className="native-input"
        disabled={true}
        name={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="label-text"
      >
        Checkbox
      </span>
    </label>
  </div>
</div>
`;

exports[`should render an uncontrolled checkbox 1`] = `
<div
  className="checkbox"
>
  <div
    className="focus-container"
  >
    <label
      className="label"
    >
      <input
        className="native-input"
        defaultChecked={true}
        disabled={false}
        name={null}
        onBlur={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="label-text"
      >
        Checkbox
      </span>
    </label>
  </div>
</div>
`;
